--- a/package.json
+++ b/package.json
@@ -1,15 +1,31 @@
 {
   "name": "loema.tech",
   "version": "0.1.0",
-  "private": true,
+  "description": "Loema Tech website",
+  "author": "eka @dannyeka",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
+    "@chakra-ui/react": "^1.3.3",
+    "@emotion/react": "^11.1.5",
+    "@emotion/styled": "^11.1.5",
+    "framer-motion": "^3.7.0",
     "next": "10.0.7",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
-  }
+    "react-dom": "17.0.1",
+    "react-particles-js": "^3.4.1",
+    "react-query": "^3.12.0",
+    "react-tsparticles": "^1.18.12"
+  },
+  "devDependencies": {
+    "@svgr/webpack": "^5.5.0",
+    "@types/node": "^14.14.31",
+    "@types/react": "^17.0.2",
+    "@types/react-dom": "^17.0.1",
+    "typescript": "^4.2.2"
+  },
+  "license": "MIT"
 }
