--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "next": "10.0.7",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-particles-js": "^3.4.1",
+    "react-icons": "^4.2.0",
     "react-query": "^3.12.0",
     "react-tsparticles": "^1.18.12"
   },
